--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 StuffJS
 =======
 
-Some stuff, written in JavaScript. Includes 2 useful libraries that do as little as possible whilst trying to remain useful. The libraries are currently:
+Some stuff, written in JavaScript. Includes 2 libraries that do as little as possible whilst trying to remain useful. The libraries are currently:
   - exemplar.js - provides sugar for declaring function exemplars (i.e. making use of the function + prototype pattern), inheriting and copying properties across.
   - events.js - provides an event emitter/pub-sub library that supports DOM and non-DOM events and supports rudimentary namespacing.
 
